--- a/requirements.in
+++ b/requirements.in
@@ -1,12 +1,12 @@
-Flask==1.0.2
-Flask-SocketIO==3.1.2
+Flask==2.1.3  # socketio needs older werkzeug and older werkzeug needs older flask
+Flask-SocketIO==3.1.2  # UI needs older version of socketio
 transformers==4.26.1
-openai==0.3.0
+openai==0.26.5
+python-dotenv==1.0.0
 
 pip-tools==6.12.2
 
 # pinning versions to avoid breaking changes
-Jinja2==3.0.3
-# markupsafe==2.0.1
-itsdangerous==2.0.1
+# Jinja2==3.0.3
+# itsdangerous==2.0.1
 Werkzeug==2.0.3
