--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,14 @@
 #
 #    pip-compile --resolver=backtracking
 #
+aiohttp==3.8.4
+    # via openai
+aiosignal==1.3.1
+    # via aiohttp
+async-timeout==4.0.2
+    # via aiohttp
+attrs==22.2.0
+    # via aiohttp
 bidict==0.22.1
     # via python-socketio
 build==0.10.0
@@ -11,7 +19,9 @@ build==0.10.0
 certifi==2022.12.7
     # via requests
 charset-normalizer==3.0.1
-    # via requests
+    # via
+    #   aiohttp
+    #   requests
 click==8.1.3
     # via
     #   flask
@@ -20,29 +30,37 @@ filelock==3.9.0
     # via
     #   huggingface-hub
     #   transformers
-flask==1.0.2
+flask==2.1.3
     # via
     #   -r requirements.in
     #   flask-socketio
 flask-socketio==3.1.2
     # via -r requirements.in
+frozenlist==1.3.3
+    # via
+    #   aiohttp
+    #   aiosignal
 huggingface-hub==0.12.1
     # via transformers
 idna==3.4
-    # via requests
-itsdangerous==2.0.1
     # via
-    #   -r requirements.in
-    #   flask
-jinja2==3.0.3
-    # via
-    #   -r requirements.in
-    #   flask
+    #   requests
+    #   yarl
+importlib-metadata==6.0.0
+    # via flask
+itsdangerous==2.1.2
+    # via flask
+jinja2==3.1.2
+    # via flask
 markupsafe==2.1.2
     # via jinja2
+multidict==6.0.4
+    # via
+    #   aiohttp
+    #   yarl
 numpy==1.24.2
     # via transformers
-openai==0.3.0
+openai==0.26.5
     # via -r requirements.in
 packaging==23.0
     # via
@@ -53,6 +71,8 @@ pip-tools==6.12.2
     # via -r requirements.in
 pyproject-hooks==1.0.0
     # via build
+python-dotenv==1.0.0
+    # via -r requirements.in
 python-engineio==4.3.4
     # via python-socketio
 python-socketio==5.7.2
@@ -77,6 +97,7 @@ tomli==2.0.1
 tqdm==4.64.1
     # via
     #   huggingface-hub
+    #   openai
     #   transformers
 transformers==4.26.1
     # via -r requirements.in
@@ -90,6 +111,10 @@ werkzeug==2.0.3
     #   flask
 wheel==0.38.4
     # via pip-tools
+yarl==1.8.2
+    # via aiohttp
+zipp==3.15.0
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
