--- a/requirements.in
+++ b/requirements.in
@@ -1,10 +1,7 @@
-Flask==2.1.3  # socketio needs older werkzeug and older werkzeug needs older flask
-Flask-SocketIO==3.1.2  # UI needs older version of socketio
+Flask==2.2.3
+Flask-SocketIO==5.3.2
 transformers==4.26.1
 openai==0.26.5
 python-dotenv==1.0.0
 
 pip-tools==6.12.2
-
-# pinning versions to avoid breaking changes
-Werkzeug==2.0.3
