--- a/requirements.txt
+++ b/requirements.txt
@@ -30,11 +30,11 @@ filelock==3.9.0
     # via
     #   huggingface-hub
     #   transformers
-flask==2.1.3
+flask==2.2.3
     # via
     #   -r requirements.in
     #   flask-socketio
-flask-socketio==3.1.2
+flask-socketio==5.3.2
     # via -r requirements.in
 frozenlist==1.3.3
     # via
@@ -53,7 +53,9 @@ itsdangerous==2.1.2
 jinja2==3.1.2
     # via flask
 markupsafe==2.1.2
-    # via jinja2
+    # via
+    #   jinja2
+    #   werkzeug
 multidict==6.0.4
     # via
     #   aiohttp
@@ -105,10 +107,8 @@ typing-extensions==4.5.0
     # via huggingface-hub
 urllib3==1.26.14
     # via requests
-werkzeug==2.0.3
-    # via
-    #   -r requirements.in
-    #   flask
+werkzeug==2.2.3
+    # via flask
 wheel==0.38.4
     # via pip-tools
 yarl==1.8.2
